Concluindo o conteúdo de HTML5

--- a/02 Fundamentos Front-End/01 Introdução HTML5 e CSS3/Projeto - Site Pessoal/index.html
+++ b/02 Fundamentos Front-End/01 Introdução HTML5 e CSS3/Projeto - Site Pessoal/index.html
@@ -4,9 +4,57 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rafael Santiago</title>
+          <link rel="stylesheet" href="./src/styles/style.css">
 	</head>
 	<body>
-		<h1>Olá!</h1>
-		<p>Meu nome é Rafael Santiago! Prazer em te conhecer!</p>
+		<header>
+               <img src="./src/images/author-photo.jpeg" alt="Author image" class="author-image">
+			<h1>Rafael Santiago</h1>
+		</header>
+
+		<main>
+			<section>
+				<header>
+					<h2>Outros projetos:</h2>
+				</header>
+
+				<ul>
+					<li><a href="#" target="_blank">Identificador de Idade</a></li>
+					<li><a href="#" target="_blank">Tabuada</a></li>
+					<li><a href="#" target="_blank">Sequenciador</a></li>
+				</ul>
+			</section>
+
+			<article>
+				<header>
+					<h3>Postagem:</h3>
+				</header>
+
+				<p>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga nemo aperiam
+					excepturi rem, odio, ea mollitia quo autem laborum at error. Ea consequatur
+					velit veniam temporibus, nam odit dolorem est? Lorem ipsum, dolor sit amet
+					consectetur adipisicing elit. Distinctio laudantium nam iure. Corrupti,
+					earum. Ipsam totam maxime blanditiis distinctio quisquam commodi labore!
+					Eveniet ipsum debitis omnis beatae culpa, soluta vero!
+				</p>
+
+                    <img src="./src/images/html-code.jpg" alt="A random HTML code" class="html-code">
+
+				<p>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga nemo aperiam
+					excepturi rem, odio, ea mollitia quo autem laborum at error. Ea consequatur
+					velit veniam temporibus, nam odit dolorem est? Lorem ipsum, dolor sit amet
+					consectetur adipisicing elit. Distinctio laudantium nam iure. Corrupti,
+					earum. Ipsam totam maxime blanditiis distinctio quisquam commodi labore!
+					Eveniet ipsum debitis omnis beatae culpa, soluta vero!
+				</p>
+			</article>
+		</main>
+
+		<footer>
+			<p>&copy;Rafael Santiago</p>
+			<p><img src="#" alt="#" /><a href="" target="_blank">Github</a></p>
+		</footer>
 	</body>
 </html>
