--- a/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/index.html
+++ b/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/index.html
@@ -29,92 +29,23 @@
 	<body>
 		<section class="content">
 			<header>
-				<h1 class="main-title">Pokedex</h1>
+				<h1>Pokedex</h1>
 			</header>
 			<ol class="pokemon">
 				<li class="grass">
 					<span class="number">#001</span>
 					<span class="name">Bulbasaur</span>
 					<div class="detail">
-						<ol class="types">
-							<li class="type">Grass</li>
-							<li class="type">Poison</li>
-						</ol>
-						<img
-							src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-							alt="Bulbasaur"
-						/>
-					</div>
+                              <ol class="types">
+                                   <li class="type">Grass</li>
+                                   <li class="type">Poison</li>
+                              </ol>
+                              <img
+                                   src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                                   alt="Bulbasaur"
+                              />
+                         </div>
 				</li>
-				<li class="grass">
-					<span class="number">#002</span>
-					<span class="name">Ivysaur</span>
-					<div class="detail">
-						<ol class="types">
-							<li class="type">Grass</li>
-							<li class="type">Poison</li>
-						</ol>
-						<img
-							src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg"
-							alt="Ivysaur"
-						/>
-					</div>
-				</li>
-				<li class="grass">
-					<span class="number">#003</span>
-					<span class="name">Venasaur</span>
-					<div class="detail">
-						<ol class="types">
-							<li class="type">Grass</li>
-							<li class="type">Poison</li>
-						</ol>
-						<img
-							src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
-							alt="Venasaur"
-						/>
-					</div>
-				</li>
-				<li class="fire">
-					<span class="number">#004</span>
-					<span class="name">Charmander</span>
-					<div class="detail">
-						<ol class="types">
-							<li class="type">Fire</li>
-						</ol>
-						<img
-							src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
-							alt="Charmander"
-						/>
-					</div>
-				</li>
-				<li class="fire">
-					<span class="number">#005</span>
-					<span class="name">Charmeleon</span>
-					<div class="detail">
-						<ol class="types">
-							<li class="type">Fire</li>
-						</ol>
-						<img
-							src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg"
-							alt="Charmeleon"
-						/>
-					</div>
-				</li>
-				<li class="fire">
-					<span class="number">#006</span>
-					<span class="name">Charizard</span>
-					<div class="detail">
-						<ol class="types">
-							<li class="type">Fire</li>
-							<li class="type">Flying</li>
-						</ol>
-						<img
-							src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg"
-							alt="Charizard"
-						/>
-					</div>
-				</li>
-			</ol>
 		</section>
 	</body>
 </html>
