--- a/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/index.html
+++ b/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/index.html
@@ -31,8 +31,8 @@
 			<header>
 				<h1>Pokedex</h1>
 			</header>
-			<ol class="pokemon">
-				<li class="grass">
+			<ol class="pokemon-list">
+				<li class="pokemon grass">
 					<span class="number">#001</span>
 					<span class="name">Bulbasaur</span>
 					<div class="detail">
@@ -43,6 +43,7 @@
                               <img
                                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
                                    alt="Bulbasaur"
+							class="pokemon-image"
                               />
                          </div>
 				</li>
