--- a/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/index.html
+++ b/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pokedex</title>
 
-		<!-- CDN Normalize CSS -->
+		<!-- Normalize CSS -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -14,39 +15,35 @@
 			referrerpolicy="no-referrer"
 		/>
 
-		<!-- Links assets locais -->
-		<link rel="stylesheet" href="./src/css/global.css" />
-		<script src="./src/js/main.js" type="text/javascript" defer></script>
-
-		<!-- Link Google Fonts -->
+		<!-- Font Roboto -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
 			rel="stylesheet"
 		/>
+
+		<!-- Nosso CSS -->
+		<link rel="stylesheet" href="./src/css/global.css" />
+		<link rel="stylesheet" href="./src/css/pokedex.css" />
 	</head>
+
 	<body>
 		<section class="content">
-			<header>
-				<h1>Pokedex</h1>
-			</header>
-			<ol class="pokemon-list">
-				<li class="pokemon grass">
-					<span class="number">#001</span>
-					<span class="name">Bulbasaur</span>
-					<div class="detail">
-                              <ol class="types">
-                                   <li class="type">Grass</li>
-                                   <li class="type">Poison</li>
-                              </ol>
-                              <img
-                                   src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-                                   alt="Bulbasaur"
-							class="pokemon-image"
-                              />
-                         </div>
-				</li>
+			<h1>Pokedex</h1>
+
+			<ol id="pokemonList" class="pokemons">
+				<!-- ..... Pokemons here ..... -->
+			</ol>
+
+			<div class="pagination">
+				<button id="loadMoreButton" type="button">Load More</button>
+			</div>
 		</section>
+
+		<!-- Nosso JS -->
+		<script src="./src/js/Pokemon.js"></script>
+		<script src="./src/js/poke-api.js"></script>
+		<script src="./src/js/main.js"></script>
 	</body>
 </html>
